[gd_scene load_steps=5 format=2]

[ext_resource path="res://GUI/pauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Custom Fonts/pauseMenu48.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Custom Fonts/pauseMenu_24.tres" type="DynamicFont" id=3]
[ext_resource path="res://GUI/settingsMenu.tscn" type="PackedScene" id=4]

[node name="pauseMenu" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 440
custom_constants/margin_top = 210
custom_constants/margin_left = 440
custom_constants/margin_bottom = 210

[node name="pauseMenuBackground" type="ColorRect" parent="MarginContainer"]
margin_left = 440.0
margin_top = 210.0
margin_right = 840.0
margin_bottom = 510.0
rect_min_size = Vector2( 400, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/pauseMenuBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="pauseMenuItems" type="VBoxContainer" parent="MarginContainer/pauseMenuBackground/MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 385.0
margin_bottom = 285.0

[node name="pauseLable" type="Label" parent="MarginContainer/pauseMenuBackground/MarginContainer/pauseMenuItems"]
margin_right = 370.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 2 )
text = "PAUSE"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/pauseMenuBackground/MarginContainer/pauseMenuItems"]
margin_top = 16.0
margin_right = 370.0
margin_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_top = 50
custom_constants/margin_left = 100

[node name="pauseMenuButtonVBox" type="VBoxContainer" parent="MarginContainer/pauseMenuBackground/MarginContainer/pauseMenuItems/MarginContainer"]
margin_left = 100.0
margin_top = 50.0
margin_right = 270.0
margin_bottom = 254.0
custom_constants/separation = 7

[node name="pauseMenuReturnButton" type="Button" parent="MarginContainer/pauseMenuBackground/MarginContainer/pauseMenuItems/MarginContainer/pauseMenuButtonVBox"]
margin_right = 170.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 3 )
text = "Return"

[node name="pauseMenuOptionsButton" type="Button" parent="MarginContainer/pauseMenuBackground/MarginContainer/pauseMenuItems/MarginContainer/pauseMenuButtonVBox"]
margin_top = 27.0
margin_right = 170.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 3 )
text = "Options"

[node name="pauseMenuQuitButton" type="Button" parent="MarginContainer/pauseMenuBackground/MarginContainer/pauseMenuItems/MarginContainer/pauseMenuButtonVBox"]
margin_top = 54.0
margin_right = 170.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 3 )
text = "Quit Game"

[node name="settingsMenu" parent="." instance=ExtResource( 4 )]

[connection signal="pressed" from="MarginContainer/pauseMenuBackground/MarginContainer/pauseMenuItems/MarginContainer/pauseMenuButtonVBox/pauseMenuReturnButton" to="." method="_on_pauseMenuReturnButton_pressed"]
[connection signal="pressed" from="MarginContainer/pauseMenuBackground/MarginContainer/pauseMenuItems/MarginContainer/pauseMenuButtonVBox/pauseMenuOptionsButton" to="." method="_on_pauseMenuOptionsButton_pressed"]
[connection signal="pressed" from="MarginContainer/pauseMenuBackground/MarginContainer/pauseMenuItems/MarginContainer/pauseMenuButtonVBox/pauseMenuQuitButton" to="." method="_on_pauseMenuQuitButton_pressed"]
